# rusttorney

./: .gitignore  Cargo.toml
command-derive/: Cargo.toml
command-derive/command-derive-impl/: Cargo.toml
command-derive/command-derive-impl/src/: helpers.rs  lib.rs
command-derive/src/: ao_message_handler.rs  lib.rs  main.rs
command-derive/tests/: 01-accept-enum.rs  02-reject-struct.rs  02-reject-struct.stderr  03-reject-no-code.rs  03-reject-no-code.stderr  04-fromstriter-reject-enum.rs  04-fromstriter-reject-enum.stderr  05-accept-fromstriter-both-named-and-unnamed.rs  06-reject-wrong-code-lit.rs  06-reject-wrong-code-lit.stderr  07-flatten.rs  07-reject-double-key.rs  07-reject-double-key.stderr  08-accept-no-handler.rs  ao_message_handler.rs  progress.rs
config/: config.toml  music.toml
migrations/: v1.sql  v2.sql  v3.sql
rusttorney-server/: Cargo.toml
rusttorney-server/src/: client_manager.rs  command.rs  config.rs  handlers.rs  lib.rs  main.rs  master_server_client.rs  music_list.rs  server.rs
rusttorney-server/src/networking/: codec.rs  database.rs  mod.rs
src/: client_manager.rs  command.rs  config.rs  lib.rs  main.rs  master_server_client.rs  server.rs
src/networking/: aocommands.rs  codec.rs  database.rs  mod.rs
