[package]
name = "command-derive"
version = "0.0.0"
authors = ["Mr-Andersen <vlasov.andrey.oui@gmail.com>"]
edition = "2018"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
command-derive-impl = { path = "command-derive-impl" }
