[package]
name = "rusttorney-server"
version = "0.1.0"
authors = ["Kirill Mironov | vetrokm@gmail.com", "Contributors"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
bytes = "0.5.6"
command-derive = { path = "../command-derive" }
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
tokio = { version = "0.2.21", features = ["tcp", "macros", "dns", "io-util", "stream"] }
tokio-postgres = "0.5.5"
tokio-util = { version = "0.3.1", features = ["codec"] }
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
