[package]
name = "rusttorney-server"
version = "0.1.0"
authors = ["Kirill Mironov | vetrokm@gmail.com", "Contributors"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["macros", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.40"
log = "0.4.14"
bytes = "1.0.1"
env_logger = "0.8.3"
futures = "0.3.14"
tokio-postgres = "0.7.1"
deadpool-postgres = "0.7.0"
deadpool = "0.7.0"