[package]
name = "command-derive-impl"
version = "0.0.0"
authors = ["Mr-Andersen <vlasov.andrey.oui@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "full"]
